--- a/lib/xholes_web/templates/page/xholes.html.eex
+++ b/lib/xholes_web/templates/page/xholes.html.eex
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="column">
-    <h1>Xholes Game: <%= @name %></h1>
+    <h1>game: <%= @name %></h1>
     <div id="root">
       <p>React app not loaded...</p>
     </div>
